<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="categoryAdapter"
            type="android.widget.SpinnerAdapter" />

        <variable
            name="durationLengthAdapter"
            type="android.widget.SpinnerAdapter" />

        <variable
            name="durationTypeAdapter"
            type="android.widget.SpinnerAdapter" />

        <variable
            name="postListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="category"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="location"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="numOfOpenings"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="internshipDurationLength"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="internshipDurationType"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="internResponsibilities"
            type="androidx.databinding.ObservableField&lt;String&gt;" />

        <variable
            name="stipend"
            type="androidx.databinding.ObservableField&lt;String&gt;" />
    </data>

    <ScrollView
        android:id="@+id/createInternshipScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".activities.CreateInternshipActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/categoryLayoutParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/category"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.tiper.MaterialSpinner
                    android:id="@+id/internshipCategory"
                    app:srcCompat="@drawable/ic_arrow_drop_down"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:spinnerMode="bottomsheet"
                    android:theme="@style/ThemeOverlay.AppCompat.Light"
                    android:adapter="@{categoryAdapter}"
                    android:padding="4dp"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationLayoutParent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Location"
                android:padding="4dp"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/internshipLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@={location}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/openingLayoutParent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/number_of_opening"
                android:padding="4dp"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberOfOpening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@={numOfOpenings}" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/startDateLayoutParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/internship_duration"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="100">

                    <Spinner
                        android:id="@+id/internshipDurationNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        android:layout_weight="70"
                        android:adapter="@{durationLengthAdapter}"
                        app:currentValue="@{internshipDurationLength}" />

                    <Spinner
                        android:id="@+id/internshipDuration"
                        android:layout_width="wrap_content"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="30"
                        android:adapter="@{durationTypeAdapter}"
                        app:currentValue="@{internshipDurationType}" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/internResponsibilitiesLayoutParent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Responsibilities Of Intern"
                android:padding="4dp"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/internshipResponsibilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@={internResponsibilities}"
                    android:maxLines="5"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stipendLayoutParent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Stipend"
                android:padding="4dp"
                android:textColorHint="@android:color/black"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stipendAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@={stipend}"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{postListener}"
                android:text="@string/post" />

        </LinearLayout>
    </ScrollView>
</layout>